--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@hookform/resolvers": "^3.3.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.3.1",
+    "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^4.35.3",
