--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
