--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^4.35.3",
@@ -35,6 +36,7 @@
     "lucide-react": "^0.279.0",
     "next": "13.4.12",
     "next-auth": "^4.23.1",
+    "next-cloudinary": "^4.22.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
