--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "next-cloudinary": "^4.22.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-intersection-observer": "^9.5.2",
     "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
