--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@uidotdev/usehooks": "^2.3.1",
     "autoprefixer": "10.4.16",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
